--- a/resume.tex
+++ b/resume.tex
@@ -9,117 +9,21 @@
 \lastupdated % Print the Last Updated text at the top right
 
 \namesection{Linda}{Zheng}{ % Your name
-\href{mailto:lindazheng1993@gmail.com}{lindazheng1993@gmail.com | 469-305-9242 | yaylinda.github.io/my-website-vue-v2} % Your contacv information
+\href{mailto:lindazheng1993@gmail.com}{lindazheng1993@gmail.com | 469-305-9242 | lindazheng.me} % Your contacv information
 }
 
-%----------------------------------------------------------------------------------------
-% LEFT COLUMN
-%----------------------------------------------------------------------------------------
-
-\begin{minipage}[t]{0.29\textwidth} % The left column takes up 33% of the text width of the page
-
-%------------------------------------------------
-% Education
-%------------------------------------------------
-
-\section{Education} 
-
-\subsection{Rice University}
-
-\descript{Bachelor of Science in Computer Science, Statistics}
-\location{Aug 2012 - May 2016 \\ GPA: 3.7}
-
-%------------------------------------------------
-% Coursework
-%------------------------------------------------
-
-\section{Coursework}
-
-\subsection{Computer Science}
-\textbullet{} Artificial Intelligence\\
-\textbullet{} Game Creation \& Design\\
-\textbullet{} Operating Systems\\
-\textbullet{} Concurrent Programming\\
-\textbullet{} Database Systems and Design\\
-\textbullet{} Object Oriented Programming\\
-\textbullet{} Compilers\\
-\textbullet{} Data Structures\\
-\textbullet{} Advanced Algorithms\\
-
-\sectionsep % Some whitespace after the section
-
-\subsection{Statistics}
-\textbullet{} Data Mining\\
-\textbullet{} Statistical Learning\\
-\textbullet{} Financial Time Series\\
-\textbullet{} Regression Analysis\\
-\textbullet{} Bioinformatics\\
-
-\sectionsep % Some whitespace after the section
-
-%------------------------------------------------
-% Skills
-%------------------------------------------------
-
-\section{Skills}
-
-\subsection{Programming}
-
-\textbullet{} Java\\
-\textbullet{} Python\\
-\textbullet{} JavaScript/Typescript\\
-\textbullet{} HTML/CSS\\
-\textbullet{} SQL\\
-\textbullet{} R\\
-\textbullet{} Matlab\\
-\textbullet{} C\\
-\textbullet{} C++
-
-\sectionsep % Some whitespace after the section
-
-\subsection{Frameworks}
-\textbullet{} AWS\\
-\textbullet{} Spring/SpringBoot\\
-\textbullet{} Vue\\
-\textbullet{} Angular\\
-\textbullet{} React\\
-\textbullet{} Android\\
-\textbullet{} iOS\\
-
-\sectionsep % Some whitespace after the section
-
-\subsection{Github}
-\textbullet{} https://github.com/yaylinda
-
-%----------------------------------------------------------------------------------------
-
-\end{minipage} % The end of the left column
-\hfill
-%
-%----------------------------------------------------------------------------------------
-% RIGHT COLUMN
-%----------------------------------------------------------------------------------------
-%
-\begin{minipage}[t]{0.7\textwidth} % The right column takes up 66% of the text width of the page
-
-%------------------------------------------------
-% Experience
-%------------------------------------------------
-
 \section{Experience}
+\sectionheadersep
 
 \runsubsection{Redfin}
-\descript{| Software Development Engineer II}
-
+\descript{| Senior Software Engineer}
 \location{Jan 2020 - Present | Frisco, TX}
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
 
 \begin{tightemize}
 \item Full-stack engineer on the Home Services team. Working with Java SpringBoot Microservices to develop RESTful API's, Kubernetes for Cloud Container deployment, Netflix Conductor for Microservice Orchestration, React for frontend development. 
 \end{tightemize}
 
 \sectionsep % Some whitespace after the section
-
 
 \runsubsection{Capital One}
 \descript{| Senior Software Engineer}
@@ -163,110 +67,55 @@
 \sectionsep % Some whitespace after the section
 
 %------------------------------------------------
-
-%----------------------------------------------------------------------------------------
-
-\end{minipage} % The end of the right column
-
-%----------------------------------------------------------------------------------------
-% SECOND PAGE (EXAMPLE)
-%----------------------------------------------------------------------------------------
-
-\newpage % Start a new page
-
-\begin{minipage}[t]{0.29\textwidth} % The left column takes up 33% of the text width of the page
-
-\section{}
-
-\end{minipage} % The end of the left column
-\hfill
-\begin{minipage}[t]{0.7\textwidth} % The right column takes up 66% of the text width of the page
-
-%------------------------------------------------
-% Experience
+% Education
 %------------------------------------------------
 
-\section{Internships}
+\section{Education}
+\sectionheadersep
 
-\runsubsection{Shape Security}
-\descript{| KPCB Fellow + Software Engineering Intern}
-\location{May 2015 - Aug 2015 | Mountain View, CA}
+\runsubsection{Rice University}
+\descript{| Computer Science, Statistics}
+\location{Aug 2012 - May 2016 | GPA: 3.7}
 
-One of 60 out of 2500+ applicants chosen to be a Kleiner Perkins Caufield and Byers Engineering Fellow of 2015. Interned at Shape Security, one of KPCB's portfolio companies. There, I upgraded Shape Security's open-source project, to support tooling for ECMAScript 6, which was just coming out at the time. Tools include: Abstract Syntax Tree node generator, Parser, Code Generator from AST, AST Validator, Fuzzer, Reducer, (De)Serializer. So I could write Java to generate JavaScript code! At the end of the summer, I presented my experience at the South Bay JavaScript Meetup, hosted by Shape Security. 
+\begin{tightemize}
+\item Computer Science Courses: Artificial Intelligence, Game Creation \& Design, Operating Systems, Concurrent Programming, Database Systems and Design, Object Oriented Programming, Compilers, Data Structures, Advanced Algorithms
+\item Statistics Courses: Data Mining, Statistical Learning, Financial Time Series, Regression Analysis, Bioinformatics
+\end{tightemize}
 
 \sectionsep % Some whitespace after the section
 
 %------------------------------------------------
+% Skills
+%------------------------------------------------
 
-\runsubsection{PROS}
-\descript{| Software Engineering Intern}
+\section{Skills}
+\sectionheadersep
 
-\location{May 2014 - Aug 2014 | Houston, TX}
-Worked on three distinct projects during my internship:
-Project \#1 - Implemented ElasticSearch, LogStash, Kibana stack for various application logs. (ELK)
-Project \#2 - Built nightly task that summarizes flight booking statistics and sends analytics email, using map-reduce algorithms. (Java, Cassandra)
-Project \#3 - Created APIs for Notification and Notes Services for a Travel Agent System. (Java)
+\subsection{Programming}
+
+\textbullet{} Java\\
+\textbullet{} Python\\
+\textbullet{} JavaScript/Typescript\\
+\textbullet{} HTML/CSS\\
+\textbullet{} SQL\\
+\textbullet{} R\\
+\textbullet{} Matlab\\
+\textbullet{} C\\
+\textbullet{} C++
 
 \sectionsep % Some whitespace after the section
 
-%------------------------------------------------
-
-\runsubsection{Jones McClure Publishing}
-\descript{| Software Engineering Intern}
-
-\location{June 2013 - Sep 2013 | Houston, TX}
-Built two dynamic web applications and mobile-compatible versions: Income Tax Calculator, Child Support Calculator. (C\#, Javascript/HTML/CSS). Also built an Administration site to track and display internal business data. (C\#, Javascript/HTML/CSS).
-
-
-\sectionsep % Some whitespace after the section
-
-%------------------------------------------------
-% Other projects
-%------------------------------------------------
-
-\section{Other Projects}
-
-%------------------------------------------------
-
-\runsubsection{Simple War}
-\descript{| Personal Project}
-
-\location{2018-Present | Anywhere}
-REST-ful, turn-based game with online match-making. Java SpringBoot backend API with MongoDB for game data storage, and websockets for real-time game-board updates. Several versions of the client: Angular2, Flutter, Vue (current). Players take turns placing cards (troops, walls, special) on the board. Player wins when a certain number of points have been scored. Points are earned from successfully moving troops across the board to the opponent's side, while the opponent places cards to stop advancement. \href{yaylinda.github.io/my-website-vue-v2/simple-war}{Give it a try!}
+\subsection{Frameworks}
+\textbullet{} AWS\\
+\textbullet{} Spring/SpringBoot\\
+\textbullet{} React\\
+\textbullet{} React Native\\
+\textbullet{} Vue\\
+\textbullet{} Angular\\
 
 \sectionsep % Some whitespace after the section
 
-%------------------------------------------------
-\runsubsection{Parking Navigator}
-\descript{| Company Hackathon}
-
-\location{Aug 2017 | Plano, TX}
-Project for internal Hackathon hosted by Capital One. Drone flies around campus on a pre-set path, taking aerial shots of parking lot. Sends pictures to server for processing, using edge detection to find empty parking spots. 
-
-\sectionsep % Some whitespace after the section
-
-%------------------------------------------------
-
-\runsubsection{Decoding the Brain from Electrocorticographical Readings}
-\descript{| Undergraduate Senior Thesis in Statistics}
-
-\location{Jan 2016 - May 2016 | Houston, TX}
-Analyzed ECoG data of brain frequencies obtained from 42 nodes placed on the brain of an epileptic patient while the patient watched videos of a person saying "rock" or "rain" with blurry or clear visual and audio. Goal was to be able to classify the type of stimuli based on the brain frequencies data. Used 3D and 4D Higher Order Partial Least Squares Methods for analysis. Found strong effects of priming in the brain (audio section of the brain became activated when visual start even if there is no audio yet, and vice-versa).
-
-\sectionsep % Some whitespace after the section
-
-%------------------------------------------------
-
-\runsubsection{Computer Game Creation}
-\descript{| Senior Project}
-
-\location{Jan 2015 - May 2015 | Houston, TX}
-Multi-player, cross-platform game, combining the game-play mechanics of Doodle Jump, and competitive nature of Mario Kart. The game is called \href{http://poporopo.nimbusmog.com}{"Poporopo"} (looks better in half-screen).
-
-\sectionsep % Some whitespace after the section
-
-\end{minipage} % The end of the right column
-
-%----------------------------------------------------------------------------------------
+\subsection{Github}
+\textbullet{} https://github.com/yaylinda
 
 \end{document}
