--- a/resume.tex
+++ b/resume.tex
@@ -20,7 +20,14 @@
 \location{Jan 2020 - Present | Frisco, TX}
 
 \begin{tightemize}
-\item Full-stack engineer on the Home Services team. Working with Java SpringBoot Microservices to develop RESTful API's, Kubernetes for Cloud Container deployment, Netflix Conductor for Microservice Orchestration, React for frontend development. 
+\item Senior engineer on the Home Services team, "Builder Tools" product. Founding and lead engineer of a sub-team within Home Services, called "Vendor Management".
+\item Led the design and development of several large projects, and mentored junior and new teammates, with weekly 1:1's, pair programming and debugging sessions, answering questions on Slack in the team engineering channels.
+\item Backend technologies: Java, GraphQL, Apollo (for GraphQL schema federation), Bazel (and Gradle), Guice, SpringBoot, PostgreSQL (hosted on AWS RDS), Flyway (for DB migrations), Netflix's Conductor (for task orchestration), Kafka and Samza for stream/event processing. Kubernetes and Spinnaker for deployment. 
+\item Frontend technologies: React for desktop web application. React Native for mobile application (iOS, Android)
+\item Designed the integration with 3rd party systems and API's such as Coupa, to correctly sync and manage payment within Builder Tools. Including developing cron jobs to sync data between platforms.
+\item Founding and lead engineer of a sub-team within Home Services (Vendor Management). Worked with product and business managers, understand the needs of the users, design the product, and planned and executed the steps for development.
+\item One of the founding members of both the React Native and Typescript Working Groups, to help improve the developer experience, and increase the adoption of both of these technologies across the company.
+\item Led the initiative to migrate the team's code from a "mono-repo" to "poly-repos", with isolated deployments. Set up the new repositories, CI/CD pipelines, and documented best practices for the team.
 \end{tightemize}
 
 \sectionsep % Some whitespace after the section
