--- a/resume.tex
+++ b/resume.tex
@@ -9,7 +9,7 @@
 \lastupdated % Print the Last Updated text at the top right
 
 \namesection{Linda}{Zheng}{ % Your name
-\href{mailto:lindazheng1993@gmail.com}{lindazheng1993@gmail.com | 469-305-9242 | lindazheng.me} % Your contacv information
+\href{mailto:lindazheng1993@gmail.com}{lindazheng1993@gmail.com | 469-305-9242 | github.com/yaylinda} % Your contacv information
 }
 
 \section{Experience}
@@ -25,9 +25,9 @@
 \item Backend technologies: Java, GraphQL, Apollo (for GraphQL schema federation), Bazel (and Gradle), Guice, SpringBoot, PostgreSQL (hosted on AWS RDS), Flyway (for DB migrations), Netflix's Conductor (for task orchestration), Kafka and Samza for stream/event processing. Kubernetes and Spinnaker for deployment. 
 \item Frontend technologies: React for desktop web application. React Native for mobile application (iOS, Android)
 \item Designed the integration with 3rd party systems and API's such as Coupa, to correctly sync and manage payment within Builder Tools. Including developing cron jobs to sync data between platforms.
-\item Founding and lead engineer of a sub-team within Home Services (Vendor Management). Worked with product and business managers, understand the needs of the users, design the product, and planned and executed the steps for development.
+\item Founding and lead engineer of a sub-team within Home Services (Vendor Management). Working with product and business managers, understand the needs of the users, design the product, and planned and executed the steps for development.
 \item One of the founding members of both the React Native and Typescript Working Groups, to help improve the developer experience, and increase the adoption of both of these technologies across the company.
-\item Led the initiative to migrate the team's code from a "mono-repo" to "poly-repos", with isolated deployments. Set up the new repositories, CI/CD pipelines, and documented best practices for the team.
+\item Led the initiative to migrate the team's code from a monorepo to poly-repos, with isolated deployments. Set up the new repositories, CI/CD pipelines, and documented best practices for the team.
 \end{tightemize}
 
 \sectionsep % Some whitespace after the section
@@ -76,7 +76,8 @@
 %------------------------------------------------
 % Education
 %------------------------------------------------
-
+\sectionsep
+\sectionsep
 \section{Education}
 \sectionheadersep
 
@@ -90,6 +91,7 @@
 \end{tightemize}
 
 \sectionsep % Some whitespace after the section
+\sectionsep % Some whitespace after the section
 
 %------------------------------------------------
 % Skills
@@ -98,31 +100,31 @@
 \section{Skills}
 \sectionheadersep
 
-\subsection{Programming}
+\runsubsection{Programming Languages}
+\sectionheadersep
+\begin{tightemize}
+\item Java
+\item Python
+\item Typescript
+\item JavaScript
+\item HTML/CSS
+\item SQL
+\item R
+\end{tightemize}
 
-\textbullet{} Java\\
-\textbullet{} Python\\
-\textbullet{} JavaScript/Typescript\\
-\textbullet{} HTML/CSS\\
-\textbullet{} SQL\\
-\textbullet{} R\\
-\textbullet{} Matlab\\
-\textbullet{} C\\
-\textbullet{} C++
+\sectionsep
+\sectionsep
 
-\sectionsep % Some whitespace after the section
-
-\subsection{Frameworks}
-\textbullet{} AWS\\
-\textbullet{} Spring/SpringBoot\\
-\textbullet{} React\\
-\textbullet{} React Native\\
-\textbullet{} Vue\\
-\textbullet{} Angular\\
-
-\sectionsep % Some whitespace after the section
-
-\subsection{Github}
-\textbullet{} https://github.com/yaylinda
+\runsubsection{Frameworks \& Technologies}
+\sectionheadersep
+\begin{tightemize}
+\item AWS
+\item Kubernetes
+\item GraphQL + Apollo
+\item Spring/SpringBoot
+\item React
+\item React Native
+\item Vue
+\end{tightemize}
 
 \end{document}
