update resume with discord

--- a/resume.tex
+++ b/resume.tex
@@ -15,17 +15,31 @@
 \section{Experience}
 \sectionheadersep
 
-\runsubsection{Redfin}
+\runsubsection{Discord}
 \descript{| Senior Software Engineer}
-\location{Jan 2020 - Present | Frisco, TX}
+\location{Apr 2022 - Present | San Francisco, CA (Remote)}
 
 \begin{tightemize}
-\item Senior engineer on the Home Services team, "Builder Tools" product. Founding and lead engineer of a sub-team within Home Services, called "Vendor Management".
+\item Developed various marketing surfaces and in-app promotions for premium subscriptions (Nitro) on Desktop and Mobile clients.
+\item Developed a smoother and more streamlined payment experience for the Mobile client.
+\item Developed and currently launching a new premium subscription tier for Desktop and Mobile. Responsible for integrating with the App Store and Google Play Store. 
+\item Migrated and currently maintaining a Rust gRPC microservice for gift and promotion codes of Discord Nitro subscriptions. Highly resilient and available, with over 10M requests per day and <10ms latency.
+\end{tightemize}
+
+\sectionsep % Some whitespace after the section
+
+\runsubsection{Redfin}
+\descript{| Senior Software Engineer}
+\location{Jan 2020 - Mar 2022 | Frisco, TX}
+
+\begin{tightemize}
+\item Senior engineer in the Home Services Organization, responsible for designing and building out a platform to manage home renovation projects across Redfin properties. 
+\item Became the lead engineer for the "Vendor Management" team after a team split. Focused on developing a platform for vendor recommendations, ratings, and reviews, based on location and trade.
 \item Led the design and development of several large projects, and mentored junior and new teammates, with weekly 1:1's, pair programming and debugging sessions, answering questions on Slack in the team engineering channels.
 \item Backend technologies: Java, GraphQL, Apollo (for GraphQL schema federation), Bazel (and Gradle), Guice, SpringBoot, PostgreSQL (hosted on AWS RDS), Flyway (for DB migrations), Netflix's Conductor (for task orchestration), Kafka and Samza for stream/event processing. Kubernetes and Spinnaker for deployment. 
 \item Frontend technologies: React for desktop web application. React Native for mobile application (iOS, Android)
 \item Designed the integration with 3rd party systems and API's such as Coupa, to correctly sync and manage payment within Builder Tools. Including developing cron jobs to sync data between platforms.
-\item Founding and lead engineer of a sub-team within Home Services (Vendor Management). Working with product and business managers, understand the needs of the users, design the product, and planned and executed the steps for development.
+\item Worked with product and business managers to understand the needs of the users, collaborated with UX designers, and planned and executed the steps for development.
 \item One of the founding members of both the React Native and Typescript Working Groups, to help improve the developer experience, and increase the adoption of both of these technologies across the company.
 \item Led the initiative to migrate the team's code from a monorepo to poly-repos, with isolated deployments. Set up the new repositories, CI/CD pipelines, and documented best practices for the team.
 \end{tightemize}
@@ -110,6 +124,7 @@
 \item HTML/CSS
 \item SQL
 \item R
+\item Rust (new)
 \end{tightemize}
 
 \sectionsep
