starting encipher section

--- a/resume.tex
+++ b/resume.tex
@@ -15,15 +15,25 @@
 \section{Experience}
 \sectionheadersep
 
+\runsubsection{Encipher}
+\descript{| Principle Software Engineer}
+\location{Oct 2022 - Present | Houston, TX (Remote)}
+
+\begin{tightemize}
+\item 
+\end{tightemize}
+
+\sectionsep % Some whitespace after the section
+
 \runsubsection{Discord}
 \descript{| Senior Software Engineer}
-\location{Apr 2022 - Present | San Francisco, CA (Remote)}
+\location{Apr 2022 - Oct 2022 | San Francisco, CA (Remote)}
 
 \begin{tightemize}
 \item Developed various marketing surfaces and in-app promotions for premium subscriptions (Nitro) on Desktop and Mobile clients.
 \item Developed a smoother and more streamlined payment experience for the Mobile client.
-\item Developed and currently launching a new premium subscription tier for Desktop and Mobile. Responsible for integrating with the App Store and Google Play Store. 
-\item Migrated and currently maintaining a Rust gRPC microservice for gift and promotion codes of Discord Nitro subscriptions. Highly resilient and available, with over 10M requests per day and <10ms latency.
+\item Developed and launched a new premium subscription tier for Desktop and Mobile. Responsible for integrating with the App Store and Google Play Store. 
+\item Migrated and maintained a Rust gRPC microservice for gift and promotion codes of Discord Nitro subscriptions. Highly resilient and available, with over 10M requests per day and <10ms latency.
 \end{tightemize}
 
 \sectionsep % Some whitespace after the section
